--- a/Individuele oefeningen/Rubriek Selecties/For loop/oef10/index.html
+++ b/Individuele oefeningen/Rubriek Selecties/For loop/oef10/index.html
@@ -9,6 +9,13 @@
 </head>
 <body>
 <div id="resultaat"></div>
+
+<ul>
+    <li id="eerste"></li>
+    <li id="tweede"></li>
+    <li id="derde"></li>
+    <li id="vierde"></li>
+</ul>
 <script src="js/index.js"></script>
 </body>
 </html>
