--- a/Individuele oefeningen/Rubriek Selecties/while loop/Oef5/index.html
+++ b/Individuele oefeningen/Rubriek Selecties/while loop/Oef5/index.html
@@ -8,8 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-<div id="som"></div>
-<div id="gemiddelde"></div>
+<div id="resultaat"></div>
 
 
 <script src="js/index.js"></script>
