--- a/Individuele oefeningen/Rubriek Selecties/For loop/oef13/index.html
+++ b/Individuele oefeningen/Rubriek Selecties/For loop/oef13/index.html
@@ -5,13 +5,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>oef11</title>
+    <script src="js/index.js" defer></script>
 </head>
 <body>
-<div id="som"></div>
-<div id="gemiddelde"></div>
-
-
-<script src="js/index.js"></script>
+<main>
+    <div id="resultaat"></div>
+</main>
 </body>
 </html>
